Option to skip alignments
Former-commit-id: 22e4733373f6e803e2658436758d29373947645f